--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,8 @@ pipelines:
         services: 
           - db  
         artifacts: 
-          - "coverage-results/**" # use coverage files next step.
+          - "**/coverage-results/**" # use coverage files next step.
+          - "**/test-reports/**"
     - step:
         name: publish report to bitbucket download
         # see https://confluence.atlassian.com/bitbucket/deploy-build-artifacts-to-bitbucket-downloads-872124574.html
