--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,7 @@ pipelines:
           - db  
         artifacts: 
           - "**/coverage-results/**" # use coverage files next step.
-          - "**/test-reports/**"
+          - "**/test-results/**"
     - step:
         name: publish report to bitbucket download
         # see https://confluence.atlassian.com/bitbucket/deploy-build-artifacts-to-bitbucket-downloads-872124574.html
