--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,15 +13,9 @@ pipelines:
           - "coverage-results/**" # use coverage files next step.
           - "test-results/**"
     - step:
-        name: publish report to bitbucket download
-        # see https://confluence.atlassian.com/bitbucket/deploy-build-artifacts-to-bitbucket-downloads-872124574.html
-        image: eamonwoortman/alpine-curl-zip
+        name: publish report to codecov
         script:
-          - "zip -r coverage_${BITBUCKET_BRANCH}_${BITBUCKET_BUILD_NUMBER}.zip coverage-results"
-          - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"coverage_${BITBUCKET_BRANCH}_${BITBUCKET_BUILD_NUMBER}.zip"
-          - "zip -r ut_${BITBUCKET_BRANCH}_${BITBUCKET_BUILD_NUMBER}.zip test-results"
-          - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"ut_${BITBUCKET_BRANCH}_${BITBUCKET_BUILD_NUMBER}.zip"
-
+          - bash <(curl -s https://codecov.io/bash)
 definitions:
   services:
     db:
